break single XOR works half the time

--- a/MatasanoChallenges/makefile
+++ b/MatasanoChallenges/makefile
@@ -1,8 +1,11 @@
-CFLAGS=-Wall -march=corei7 -std=c99
+CFLAGS=-Wall -march=corei7 -std=c99 -O3
 CC=gcc
 VPATH = set1
 
-all: fixedXOR.o hexto64.o utils.o
+all: breakSingleXOR.o fixedXOR.o hexto64.o utils.o
+
+breakSingleXOR.o: breakSingleXOR.c utils.o
+	$(CC) $(CFLAGS) $^ -o $@
 
 fixedXOR.o: fixedXOR.c utils.o
 	$(CC) $(CFLAGS) $^ -o $@
